2004-05-18  Bradley Bell  <btb@icculus.org>

	* arch/linux/hmiplay.c: remove needless sleep on linux hmiplay
	startup (d1x r1.6)

	* arch/ogl/gr.c: fix off by .5 errors in ogl_upixelc and
	ogl_ulinec (d1x r1.29)

	* arch/ogl/ogl.c: fix ogl gr_ucircle (d1x r1.29)

	* arch/ogl/gr.c: fix off-by-one error in ogl_urect, right and
	bottom are inclusive not exclusive (d1x r1.28)

	* arch/ogl/ogl.c, include/ogl_init.h, main/polyobj.c: fix briefing
	spinning robot display in OGL (d1x r1.28, r1.20, r1.2)

	* arch/sdl/digi.c: fix typo

	* main/state.c: fix savegame thumbnail saving in OGL (d1x r1.6)

	* arch/win32/init.c, arch/win32/win32.c: move win32 window
	creation code from arch_init_start into arch_init to fix weirdness
	with --help (d1x r1.5, r1.6)

	* arch/linux/hmiplay.c: apply patch from bluecow to fix hmiplay
	sync issues and lack of midi reset (d1x r1.5)

	* arch/sdl/digi.c: fix crash on exit if sounds are still playing
	(d1x r1.8)

	* arch/ogl/wgl.c, arch/win32/mouse.c, misc/d_io.c: Fix mismatched
	arg types in the win32 code (d1x r1.12, r1.7, r1.2)

	* arch/linux/hmiplay.c: fix problems with msgbuf struct not being
	defined (d1x r1.4)

	* arch/linux/hmiplay.c: updated SDL include path (d1x r1.3)

	* include/vecmat.h: comments/formatting

2004-05-18  Martin Schaffner  <maschaffner@gmx.ch>

	* include/d.bat, include/lst.bat, include/m.bat, include/test.c,
	include/test.lnk: remove unnecessary files

	* configure.ac: add -no-cpp-precomp when compiling on Mac OS X.
	This enables compilation with gcc 3.1

2004-05-17  Dietfrid Mali  <dietfrid.mali@q-dial.de>

	* main/switch.c: took care of switches triggering single-sided
	walls (don't try to access the nonexistent adjacent wall via NULL
	pointers or negative array indices)

2004-05-16  Dietfrid Mali  <dietfrid.mali@q-dial.de>

        * main/wall.c: fix invalid memory access for d1 levels which
	don't have a corresponding wall behind.

2004-05-16  Martin Schaffner  <maschaffner@gmx.ch>
